# file_organizer_cli

./: README.md  pyproject.toml
src/file_organizer/: cli.py  core.py
