[project]
name = "file-organizer-cli"
version = "0.1.0"
authors = [
  { name="Dev Fuad", email="fuadmohammed368@gmail.com" },
]
description = "A command-line utility to organize files by type."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
]
keywords = ["file-management", "cli", "utility", "organization"]

[project.scripts]
organize-files = "file_organizer.cli:main" # This makes 'organize-files' available as a command

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"